# lmm

./: Cargo.toml  LICENSE  README.md
crates/lmm-cli/: Cargo.toml
crates/lmm-cli/src/: args.rs  main.rs  output.rs
crates/lmm-cli/src/cmd/: deploy.rs  downloads.rs  fomod.rs  games.rs  mod.rs  mods.rs  nexus.rs  nxm.rs  profile.rs  status.rs  tools.rs
crates/lmm-cli/src/shell/: complete.rs  data.rs  mod.rs
crates/lmm-core/: Cargo.toml
crates/lmm-core/src/: config.rs  db.rs  deploy.rs  error.rs  games.rs  hash.rs  installs.rs  launch.rs  lib.rs  model.rs  mods.rs  paths.rs  profile.rs  resolve.rs  staging.rs  verify.rs
crates/lmm-core/src/archive/: layout.rs  mod.rs  sevenz.rs  zip.rs
crates/lmm-core/src/discovery/: mod.rs  steam.rs  vdf.rs
crates/lmm-core/src/fomod/: cond.rs  env.rs  mod.rs  model.rs  parse.rs  plan.rs  session.rs  store.rs
crates/lmm-core/src/tools/: gameconfig.rs  health.rs  install.rs  loadorder.rs  mod.rs  registry.rs
crates/lmm-core/tests/: archive_safety.rs  deployment.rs  mods_and_profiles.rs  tools.rs  verify_repair.rs
crates/lmm-core/tests/common/: mod.rs
crates/lmm-nexus/: Cargo.toml
crates/lmm-nexus/src/: api.rs  download.rs  ipc.rs  lib.rs  nxm.rs  queue.rs  xdg.rs
docs/: DESIGN.md  FOMOD.md  NEXUS.md  SHELL.md  TOOLS.md
