[package]
name = "lmm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux-native CLI mod manager for games"

[[bin]]
name = "lmm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
lmm-core = { path = "../lmm-core" }
lmm-nexus = { version = "0.1.0", path = "../lmm-nexus" }
nu-ansi-term = "0.50.3"
reedline = { version = "0.49.0", features = ["external_printer"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shlex = "2.0.1"

[lints]
workspace = true
