[package]
name = "lmm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core mod-management engine for lmm (Linux mod manager)"

[dependencies]
quick-xml = "0.41.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sevenz-rust2 = "0.21.3"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.3"
walkdir = "2.5.0"
zip = "8.6.0"

[dev-dependencies]
serde_json = "1.0.150"
sevenz-rust2 = { version = "0.21.3", features = ["compress"] }

[lints]
workspace = true
