[package]
name = "lmm-nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexus Mods integration for lmm: nxm:// links, API client, download queue"

[dependencies]
lmm-core = { path = "../lmm-core" }
percent-encoding = "2.3.2"
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
ureq = { version = "3.3.0", features = ["json"] }
url = "2.5.8"

[lints]
workspace = true
